# adaptive-rag

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml  start.bat
src/adaptive_rag/api/: main.py
src/adaptive_rag/api/routers/: admin.py  documents.py  health.py  query.py
src/adaptive_rag/api/schemas/: document.py
src/adaptive_rag/api/static/: index.html
src/adaptive_rag/core/: config.py  llm_client.py
src/adaptive_rag/frequency/: clustering.py  decay.py  tracker.py
src/adaptive_rag/ingestion/: pipeline.py
src/adaptive_rag/migration/: engine.py  scheduler.py
src/adaptive_rag/retrieval/: ranker.py  router.py
src/adaptive_rag/storage/metadata_store/: base.py  postgres_store.py
src/adaptive_rag/storage/vector_store/: base.py  local_qdrant_store.py
src/adaptive_rag/tiers/: cold_tier.py  compression.py  decompression.py  hot_tier.py
tests/unit/: test_frequency.py
